--- a/app/components/Input/input.css
+++ b/app/components/Input/input.css
@@ -6,10 +6,10 @@
   border-radius: var(--border-radius);
   border: 1px solid var(--colors-cool-grey-200, #dfe3e9);
   background: var(--colors-white, #fff);
-  box-shadow: 0px 16px 40px 0px rgba(175, 183, 194, 0.2);
   color: var(--colors-cool-grey-900, #1b2b3e);
   padding: var(--spacing-8) 0 var(--spacing-8) var(--spacing-12);
-  height: var(--spacing-48);
+  /* This can't be a variable because it shouldn't shrink when the screen gets small */
+  height: 48px;
   font-size: 16px;
   font-weight: 300;
   line-height: 170%; /* 27.2px */
@@ -24,7 +24,7 @@
 /* size */
 
 .input.large {
-  height: var(--spacing-56);
+  height: 56px;
   font-size: 18px;
   letter-spacing: -0.18px;
 }
